@@ -2,6 +2,8 @@ launchpad-buildd (193) UNRELEASED; urgency=medium
 
   * Fix handling of bytes arguments passed to BuildManager.runSubProcess.
   * Fix bytes/text handling in RecipeBuilder.buildTree.
+  * Fix check-implicit-pointer-functions on Python 3: build logs aren't
+    necessarily UTF-8, so process them as bytes (LP: #1897461).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 24 Sep 2020 16:45:27 +0100
 
